  - Missed another stupid doc typo (thanks MJD)

1.000001 - 2012-07-18
  - Fix stupid doc typo (thanks miyagawa)

1.000000 - 2012-07-18
  - Initial release