@@ -1,3 +1,4 @@
+  - Document why we don't try and handle class namesZ
   - Missed another stupid doc typo (thanks MJD)
 
 1.000001 - 2012-07-18
